Add response encode handlers method
