# application/handlers/user_authorization.go
@@ -4,6 +4,7 @@ import (
 	"encoding/json"
 	"net/http"
 
+	"growth-place/application/services/user"
 	"growth-place/libs/liberror"
 )
 
@@ -20,7 +21,7 @@ type UserAuthorizationArgs struct {
 // @Accept  json
 // @Produce  json
 // @Param authorization body UserAuthorizationArgs true "User auth data"
-// @Success 201 {object} user.AuthorizationView
+// @Success 201 {object} UserAuthorizationResponse
 // @Failure 400 {object} liberror.Error
 // @Failure 404 {object} liberror.Error
 // @Failure 500 {object} liberror.Error
@@ -38,8 +39,28 @@ func (h UserHandler) UserAuthorization(w http.ResponseWriter, r *http.Request) {
 		return
 	}
 
-	w.Header().Set("Content-Type", "application/json")
-	json.NewEncoder(w).Encode(res)
-
+	err = h.encodeUserAuthorizationResponse(w, res)
+	if err != nil {
+		liberror.JSONError(w, err)
+		return
+	}
 	return
+}
+
+// encodeUserAuthorizationResponse encode user authorization response to UserAuthorizationResponse
+func (h UserHandler) encodeUserAuthorizationResponse(
+	w http.ResponseWriter,
+	res interface{},
+) error {
+	w.Header().Set("Content-Type", "application/json")
+	return json.NewEncoder(w).Encode(
+		UserAuthorizationResponse{
+			res.(user.AuthorizationView),
+		},
+	)
+}
+
+// UserAuthorizationResponse presents user authorization response struct
+type UserAuthorizationResponse struct {
+	user.AuthorizationView
 }
